Update the index to check

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero">
         <div class="hero-container">
-            <h1 data-aos="fade-up" data-aos-delay="200">Antariksh</h1>
+            <h1 data-aos="fade-up" data-aos-delay="200">Antariksh 2024</h1>
             <h2 data-aos="fade-up" data-aos-delay="300">Astronomy Club of Vishwakarma Institutes</h2>
             <a href="#months" class="btn-scroll scrollto" data-aos="fade-up" data-aos-delay="400" title="Scroll Down">
                 <i class="bx bx-rocket"></i>
